# nostr_rust

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml  publish.yml
src/: bech32.rs  events.rs  keys.rs  lib.rs  nostr_client.rs  req.rs  subscription.rs  utils.rs  websocket.rs
src/blocking/: mod.rs
src/blocking/nips/: nip1.rs  nip16.rs  nip2.rs  nip25.rs  nip4.rs  nip5.rs
src/nips/: mod.rs  nip1.rs  nip11.rs  nip13.rs  nip16.rs  nip2.rs  nip25.rs  nip4.rs  nip5.rs  nip9.rs
src/non_blocking/: mod.rs
src/non_blocking/nips/: nip1.rs  nip2.rs  nip9.rs
src/relay/: mod.rs
src/utils/: bech32.rs  event.rs  keys.rs  mod.rs  nostr_identity.rs  req.rs  utils.rs  websocket.rs
src2/: events.rs  nostr_client.rs  omain.rs  req.rs  utils.rs  websocket.rs
src2/nips/: mod.rs  nip11.rs  nip2.rs  nip25.rs  nip5.rs
