[package]
name = "nostr_rust"
description = "A Rust implementation of the Nostr protocol"
documentation = "https://docs.rs/nostr_rust"
readme = "README.md"
repository = "https://github.com/0xtlt/nostr_rust"
keywords = ["nostr", "rust", "protocol", "encryption", "decryption"]
categories = ["api-bindings"]
license = "MIT"
authors = ["Thomas Tastet"]
version = "0.5.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = { version = "1", default-features = false, features = ["std"] }
serde = { version = "1", default-features = false, features = ["derive"] }
serde_derive = "1"
sha256 = "1"
hex = "0.4"
# bech32 = "0.9" // TODO: use bech32 for encoding and decoding
rand = "0.8"
secp256k1 = { version = "0.24", features = ["bitcoin_hashes", "global-context", "rand-std"] }
tungstenite = { version = "0.17", default-features = false, features = ["rustls-tls-native-roots"] }
url = "2.3"